<resources>
    <string name="app_name">GetReToRe</string>

    <string name="title_login">Login Form</string>
    <string name="email">Email</string>
    <string name="error_email">Masukkan email yang benar!</string>
    <string name="password">Kata Sandi</string>
    <string name="error_password">"Password terlalu pendek"</string>
    <string name="login">Masuk</string>
    <string name="message_login">Masukkan dulu datamu</string>

    <string name="title_register">Register Form</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>

    <string name="title">Nama Tempat</string>
    <string name="price">Rp.30.000</string>
    <string name="description">Lorem ipsum dolor sit amet</string>

    <string name="logout">Logout</string>
    <string name="budget">Budget</string>

    <string name="title_profil">Profile</string>
    <string name="profil">Profil</string>


    <string name="title_main">Main</string>
    <string name="title_budget">Budget</string>
    <string name="title_upload">Upload</string>

    <string name="gallery">Gallery</string>
    <string name="predict">Predict</string>
    <string name="input_image">Tambahkan gambar terlebih dulu!</string>

    <string name="input_budget">Input Budget Kamu!</string>
    <string name="input_city">Kota</string>
    <string name="budget_message">Rekomendasi Tempat Wisata dan Rekreasi Sesuai Budget Kamu !</string>

    <string name="input">Tuliskan dana Anda</string>
    <string name="welcome">Welcome</string>
    <string name="hasil">Here are recommendations based on your image</string>
    <string name="city">Nama Kota</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category_wisata">
        <item>Category</item>
        <item>Bahari</item>
        <item>Budaya</item>
        <item>Cagar Alam</item>
        <item>Pusat Perbelanjaan</item>
        <item>Taman Hiburan</item>
        <item>Tempat Ibadah</item>
    </string-array>
</resources>