<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.getretore.ui.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.capstone.getretore.ui.budget.BudgetFragment"
        android:label="@string/budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.capstone.getretore.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_package"
        android:name="com.capstone.getretore.ui.package.PackageFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_package" />



</navigation>